[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portpy"
dynamic = ["version"]
description = "First open-source radiation treatment planning system in Python"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Gourav Jhanwar", email = "jhanwarg@mskcc.org" },
    { name = "Mojtaba Tefagh", email = "mtefagh@sharif.edu" },
    { name = "Vicki Taasti", email = "vicki.taasti@maastro.nl" },
    { name = "Seppo Tuomaala", email = "tuomaals@mskcc.org" },
    { name = "Saad Nadeem", email = "nadeems@mskcc.org" },
    { name = "Masoud Zarepisheh", email = "zarepism@mskcc.org" }
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "cvxpy>=1.1.18",
    "ecos>=2.0.10",
    "h5py>=3.6.0",
    "natsort>=8.1.0",
    "numpy>=1.15",
    "pandas>=1.1.5",
    "python-dateutil>=2.8.2",
    "pytz>=2022.1",
    "qdldl>=0.1.5",
    "scipy>=1.5.4",
    "scs>=3.2.0",
    "six>=1.16.0",
    "matplotlib>=3.5.3",
    "Shapely>=1.8.4",
    "SimpleITK>=2.0.2",
    "tabulate>=0.9.0",
    "jinja2==3.1.5",
    "typing-extensions>=3.10.0.0",
    "scikit-image>=0.17.2",
    "patchify>=0.2.3"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["portpy", "portpy.*"]

[tool.setuptools.dynamic]
version = { attr = "portpy.__version__" }

[tool.setuptools.package-data]
"*" = ["*.md"]

[tool.setuptools.exclude-package-data]
"portpy" = ["examples/*"]  # Exclude specific directories

[project.urls]
Homepage = "https://github.com/PortPy-Project/PortPy"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = ["examples", "docs", "scripts"]
# add project root to sys.path so "import portpy" works
pythonpath = ["."]

[project.optional-dependencies]
mosek = ["Mosek>=9.3.14"]
pydicom = ["pydicom>=2.2.0"]
all = ["Mosek>=9.3.14", "pydicom>=2.2.0", "websocket-client>=1.8.0", "visdom>=0.2.4", "dominate>=2.6.0", "torch>=2.7.0", "torchfile>=0.1.0", "torchvision>=0.9.1", "huggingface-hub>=0.34.3"]
test = ["pytest>=8.0", "huggingface-hub>=0.34.3"]
ai = ["websocket-client>=1.8.0", "visdom>=0.2.4", "dominate>=2.6.0", "torch>=2.7.0", "torchfile>=0.1.0", "torchvision>=0.9.1"]